templates/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "alertrules_Traffic_In_name": {
            "defaultValue": "Traffic-In",
            "type": "String"
        },
        "publicIPAddresses_ExtIP_name": {
            "defaultValue": "ExtIP",
            "type": "String"
        },
        "networkInterfaces_shadowsocks_name": {
            "defaultValue": "shadowsocks",
            "type": "String"
        },
        "virtualNetworks_Linux_SRV_vnet_name": {
            "defaultValue": "Linux-SRV-vnet",
            "type": "String"
        },
        "networkInterfaces_linux_srv1362_name": {
            "defaultValue": "linux-srv1362",
            "type": "String"
        },
        "networkInterfaces_linux_srv2377_name": {
            "defaultValue": "linux-srv2377",
            "type": "String"
        },
        "publicIPAddresses_linux_srv1_ip_name": {
            "defaultValue": "linux-srv1-ip",
            "type": "String"
        },
        "publicIPAddresses_linux_srv2_ip_name": {
            "defaultValue": "linux-srv2-ip",
            "type": "String"
        },
        "networkSecurityGroups_linux_srv1_nsg_name": {
            "defaultValue": "linux-srv1-nsg",
            "type": "String"
        },
        "networkSecurityGroups_linux_srv2_nsg_name": {
            "defaultValue": "linux-srv2-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "disks_linux_srv1_OsDisk_1_39f1f27617bb49ce91dbd029e6c762de_name": {
            "defaultValue": "linux-srv1_OsDisk_1_39f1f27617bb49ce91dbd029e6c762de",
            "type": "String"
        },
        "disks_linux_srv2_OsDisk_1_141e8385fafe4ee68fecf5c012c9ad90_name": {
            "defaultValue": "linux-srv2_OsDisk_1_141e8385fafe4ee68fecf5c012c9ad90",
            "type": "String"
        },
        "securityRules_OpenVPN_name": {
            "defaultValue": "OpenVPN",
            "type": "String"
        },
        "securityRules_Shadowsocks_name": {
            "defaultValue": "Shadowsocks",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name_1": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "alertrules_Traffic_In_resourceUri": {
            "defaultValue": "/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Compute/virtualMachines/shadowsocks",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
               
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_linux_srv1_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "c40be6bb-f630-4b51-a509-86afc3914229",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Shadowsocks",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8388",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "OpenVPN",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"ccaae4b0-e497-4628-a2c7-5e1e5ad2d4cd\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv2-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_linux_srv2_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "3c8e7a05-7b54-452e-ad21-1e72e60b2c52",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"849a277c-ac0b-4b99-9d0e-e734e9d3ab6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/publicIPAddresses/ExtIP'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_ExtIP_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f1e17897-0770-45d5-b34e-1bb0dc1267e4",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "shadowsocks-vpn",
                    "fqdn": "shadowsocks-vpn.westeurope.cloudapp.azure.com"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/publicIPAddresses/linux-srv1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_linux_srv1_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "4f027a0b-d35e-4267-9f20-ece6636cb230",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/publicIPAddresses/linux-srv2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_linux_srv2_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "641a6eda-bc81-4bcd-8844-c3b3169ba1bd",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/virtualNetworks/Linux-SRV-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Linux_SRV_vnet_name')]",
            "apiVersion": "2018-02-01",
            "location": "westeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "182ac10a-3680-49ba-a090-005c3fa48edd",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"c8abf54f-2755-42ee-ab1c-bcdae5ed14ff\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
                            },
                            "serviceEndpoints": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv1-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_linux_srv1_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv1-nsg/securityRules/Shadowsocks'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_linux_srv1_nsg_name'), '/', parameters('securityRules_Shadowsocks_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "8388",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv1-nsg/securityRules/OpenVPN'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_linux_srv1_nsg_name'), '/', parameters('securityRules_OpenVPN_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1020,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/networkSecurityGroups/linux-srv2-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_linux_srv2_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name_1'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv2_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/721b9c96-45a2-4621-afdc-c6c22ed5a094/resourceGroups/Linux-SRV/providers/Microsoft.Network/virtualNetworks/Linux-SRV-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_Linux_SRV_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
                },
                "serviceEndpoints": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Linux_SRV_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_linux_srv1_nsg_name'))]"
            ]
        }
    ]
}
